# nga-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  TRADEMARKS.md  build.rs  installer.nsi  tauri.conf.json  tauri.macos.conf.json
Web-Home/: _worker.js  index.html  install.sh  version.json
Web-Home/courses/: claude-code.html  codex.html  founders-playbook.html  openclaw.html  opencode.html
Web-Home/courses/claude-code/: 01-slash-commands.md  03-skills.md  04-subagents.md  05-mcp.md  06-hooks.md  07-plugins.md  09-advanced-features.md  10-cli.md  modules.js
Web-Home/courses/claude-code/en/: 01-slash-commands.md  02-memory.md  03-skills.md  04-subagents.md  05-mcp.md  06-hooks.md  07-plugins.md  08-checkpoints.md  09-advanced-features.md  10-cli.md
Web-Home/courses/founders-playbook/: 01-intro.md  02-idea.md  03-mvp.md  04-launch.md  05-scale.md  06-stories.md  build.js  modules.js
Web-Home/courses/founders-playbook/en/: 01-intro.md  02-idea.md  03-mvp.md  04-launch.md  05-scale.md  06-stories.md
Web-Home/css/: courses.css  style.css
Web-Home/js/: course-tabs.js  main.js
capabilities/: default.json
icons/: icon.icns
install/: install.ps1  install.sh  release-notes-template.md
screenshot/: 任务看板.mov  切换主题.mov  历史记录.mov
scripts/: nga-cli-codex-notify.py  nga-cli-hermes-plugin.py  nga-cli-hook.py  nga-cli-opencode-plugin.js  rebuild-icons.py
skills/hyperframes/: SKILL.md
skills/playwright/: SKILL.md
skills/playwright/scripts/: run.sh
skills/screenshot/: SKILL.md
skills/vibeid/: SKILL.md  matrix.json
src/: fs_watcher.rs  hook_installer.rs  hook_server.rs  main.rs  marketplace.rs  server.rs  skills.rs  terminal.rs  tool_config.rs
src-ui/: index.html  package-lock.json  package.json  vite.config.ts
src-ui/src/: App.tsx  global.d.ts  main.tsx  tauri.ts
src-ui/src/components/center/: ActiveGambit.tsx  CenterPanel.css  CenterPanel.tsx  ChatReader.css  ChatReader.tsx  ContributionHeatmap.css  ContributionHeatmap.tsx  FourSplitGrid.tsx  Gambit.css  Gambit.tsx  MarkdownContent.tsx  MultiAgentGrid.css  SkillsPanel.tsx  TierTerminal.css  TierTerminal.tsx  ToolConfigModal.tsx
src-ui/src/components/common/: ResizeEdges.css  ResizeEdges.tsx  TitleBar.tsx
src-ui/src/components/left/: Explorer.css  Explorer.tsx
src-ui/src/components/right/: ChangesBoard.css  ChangesBoard.tsx  Compiler.tsx  DiffPanel.css  DiffPanel.tsx  HistoryBoard.css  HistoryBoard.tsx  TaskBoard.css  TaskBoard.tsx
src-ui/src/i18n/: de.ts  en.ts  es.ts  fr.ts  ja.ts  ko.ts  pt.ts  ru.ts  vi.ts  zh-CN.ts  zh-TW.ts
src-ui/src/lib/: agent-status-bus.ts  file-stats.tsx  history-cache.ts  platform.ts  pty-event-bus.ts  shiki.ts  tool-info.ts  use-data-attr.ts  window-focus-filter.ts
src-ui/src/store/: app-state.tsx
src-ui/src/styles/: global.css
src-ui/src/utils/: skill-meta.ts
src/tools/: antigravity.rs  claude.rs  codex.rs  hermes.rs  mimocode.rs  mod.rs  nga.rs  openclaw.rs  opencode.rs  qwen.rs
